--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* THE FIVE VARIABLES IN ROOT ARE ONLY THING YOU NEED TO CHANGE */
+/* THE VARIABLES IN ROOT ARE ONLY THING YOU NEED TO CHANGE */
 /* NOTE: Do NOT surround variables in quotes */
 :root {
     /* Before and after images, using relative paths */
